--- a/index.html
+++ b/index.html
@@ -653,19 +653,19 @@
       <div class="scrolling-text">
         <div class="step" data-target="img-1">
           <div class="temperature-section">
-            <p>Bentiu, found in Unity State, in the North of South Sudan records a temperature increase of:</p> 
+            <p>Since the 1980s, Bentiu, located in Unity State in the north of South Sudan, has recorded a temperature increase of:</p> 
             <span class="count" data-value="3.0">0°C</span>
           </div>
         </div>
         <div class="step" data-target="img-2">
           <div class="temperature-section">
-            <p>Bor, found in Jonglei State, in Central South Sudan records a temperature increase of:</p>
+            <p>Since the 1980s, Bor, located in Jonglei State in Central South Sudan, has recorded a temperature increase of:</p>
             <span class="count" data-value="2.8">0°C</span>
            </div>
         </div>
         <div class="step" data-target="img-3">
          <div class="temperature-section">  
-            <p>Juba, found in the Central Equatoria State, in Southern South Sudan records a temperature increase of:</p>
+            <p>Since the 1980s, Juba, located in the Central Equatoria State in Southern South Sudan, has recorded a temperature increase of:</p>
             <span class="count" data-value="2.6">0°C</span> 
          </div>   
         </div> 
