--- a/index.html
+++ b/index.html
@@ -312,7 +312,10 @@
 
   <!-- Navigation -->
   <nav>
-    <a href="#project" class="nav-left">Project</a>
+    <div class="nav-logo">
+      <img src="CFA_Logo.png" alt="Logo">
+    </div>
+    <a href="#project" class="nav-right">Project</a>
     <a href="#about" class="nav-right">About</a>
   </nav>
   
