--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
       
     }
     /* ======= Navigation Bar ======= */
+    .nav-logo img {
+      height: 40px; 
+      width: auto;
+      display: block;
+    }
     nav {
     position: fixed;
     top: 0;
@@ -315,7 +320,7 @@
     <div class="nav-logo">
       <img src="CFA_Logo.png" alt="Logo">
     </div>
-    <a href="#project" class="nav-right">Project</a>
+    <a href="#project" class="nav-left">Project</a>
     <a href="#about" class="nav-right">About</a>
   </nav>
   
