--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     }
     /* ======= Navigation Bar ======= */
     .nav-logo img {
-      height: 40px; 
-      width: auto;
+      height: 60px; 
+      width: 60px;
       display: block;
     }
     nav {
@@ -144,14 +144,14 @@
       position: relative;
       display: flex;
       flex-direction: column;
-      margin: 4rem 0;
+      margin: 2rem 0;
     }
 
     .visuals {
       position: sticky;
       top: 0;
       width: 100%;
-      height: 100vh;
+      height: 80vh;
       /*background: #000;*/
       z-index: 1;
       display: flex;
