--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       position: sticky;
       top: 0;
       width: 100%;
-      height: 80vh;
+      height: 100vh;
       /*background: #000;*/
       z-index: 1;
       display: flex;
@@ -161,8 +161,10 @@
 
     .visuals iframe {
       position: absolute;
-      width: 100%;
-      height: 100%;
+      width: 90%;
+      height: auto;
+      aspect-ratio: 16/9;
+      max-height: 90vh;
       border: none;
       opacity: 0;
       transition: opacity 0.8s ease-in-out;
@@ -170,7 +172,7 @@
 
     .visuals iframe.active {
       opacity: 1;
-      z-index: 2;
+     /* z-index: 2;*/
     }
 
     .scrolling-text {
