--- a/index.html
+++ b/index.html
@@ -506,51 +506,63 @@
   </section>
   
   <!-- Section 16 : Flourish 6 chart -->
-  <section class = "flourish6-section">
+ <!--<section class = "flourish6-section">
       <div class="flourish6-figure">
       <iframe id="vis-7" src="https://public.flourish.studio/visualisation/24881919/embed"></iframe>
     </div>
-  </section>
+  </section> -->
   
   <!-- Section 16' : Flourish 6 text -->
-  <section class = "intro-text">
+   <!--<section class = "intro-text">
   <p>
   Housing patterns reflect this pressure. About half of households live under iron-sheet roofs, while the others are stacked in concrete-roofed buildings. This distinction matters for air quality.
   </p>
-  </section>
+  </section> -->
   
-  <!-- Section 17 : Single-Step Scrollytelling -->
+  <!-- Section 17 : 3-Step Scrollytelling -->
   <section class="scrolly-section">
     <div class="visuals">
+      <iframe id="vis-12" src="https://public.flourish.studio/visualisation/24881919/embed"></iframe>
       <iframe id="vis-8" src="https://public.flourish.studio/visualisation/24882063/embed"></iframe>
+      <iframe id="vis-13" src="https://public.flourish.studio/visualisation/24882364/embed"></iframe>
     </div>
   
     <div class="scrolling-text">
-      <div class="step" data-target="vis-8">
-        <h3>Housing Materials in Mathare</h3>
-        <p>
-          Iron-sheet roofing usually points to single-storey structures, while concrete or cement slabs are a marker of multi-storey housing.
-        </p>
-        <p>
-          This means, a single building footprint on our buildings map can stack many families on top of one another, multiplying the emissions and smoke produced in the same limited space.
-        </p>
-      </div>
+      <div class="step" data-target="vis-12">
+          <h3>Population Density Across Nairobi Sub-Counties</h3>
+        </div>
+
+        <div class="step" data-target="vis-8">
+          <h3>Housing Materials in Mathare</h3>
+          <p>
+            Housing patterns reflect this pressure. About half of households live under iron-sheet roofs, while the others are stacked in concrete-roofed buildings. This distinction matters for air quality. Iron-sheet roofing usually points to single-storey structures, while concrete or cement slabs are a marker of multi-storey housing.
+          </p>
+        </div>
+
+        <div class="step" data-target="vis-13">
+          <h3>Household Cooking Fuels in Mathare</h3>
+          <p>
+            Energy choices in Mathare show why air pollution persists indoors. Almost half of households rely on paraffin (kerosene), a fuel the World Health Organisation classifies as highly polluting.
+            This means, a single building footprint can stack many families on top of one another, multiplying the emissions and smoke produced in the same limited space. Every day, families fill their homes with PM2.5, carbon monoxide, and toxic fumes, while others depend on charcoal or firewood. Even those using LPG often cook in poorly ventilated rooms, allowing smoke to seep outside.
+          </p>
+        </div>
+      
     </div>
   </section>
   
   <!-- Section 18 : Flourish 7 Text -->
-    <section class="intro-text">
+  <!--   <section class="intro-text">
     <p>
      Energy choices in Mathare show why air pollution persists indoors. Almost <strong>half of households</strong> rely on paraffin (kerosene) for cooking, a fuel the World Health Organization classifies as highly polluting. 
     </p>
-  </section>
+  </section>  -->
     
   <!-- Section 19 : Flourish 7 chart -->
-  <section class = "flourish7-section">
+  <!-- <section class = "flourish7-section">
       <div class="flourish7-figure">
       <iframe id="vis-9" src="https://public.flourish.studio/visualisation/24882364/embed"></iframe>
     </div>
-  </section>
+  </section> -->
   
   <!-- Section 19' : Flourish 7 text -->
   <section class = "intro-text">
@@ -612,6 +624,7 @@
   </section>
   
   <!-- Section 23 : Single scrolly 2 -->
+  
   <section class="scrolly-section">
     <div class="visuals">
       <iframe id="vis-11" src="https://public.flourish.studio/visualisation/25137102/embed"></iframe>
