--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
     .flourish5-figure,
     .flourish6-figure,
     .flourish7-figure,
-    .flourish8-figure {
+    .flourish8-figure,
+    .flourish9-figure {
       width: 100%;
       height: 750px;
       aspect-ratio: 16 / 9;
@@ -587,7 +588,7 @@
   </p>  
   </section>
     
-  <!-- Section 21 : Flourish 8 Figure -->
+  <!-- Section 21 : Flourish 8 chart -->
   <section class = "flourish8-section">
       <div class="flourish8-figure">
       <iframe id="vis-10" src="https://public.flourish.studio/visualisation/25132500/embed"></iframe>
@@ -623,9 +624,31 @@
     </p>
   </section>
   
-  <!-- Section 23 : Single scrolly 2 -->
+  <!-- Section 23 : Flourish 9 chart -->
+
+  <section class = "flourish9-section">
+      <div class="flourish9-figure">
+      <iframe id="vis-13" src="https://public.flourish.studio/visualisation/25137102/embed"></iframe>
+    </div>
+  </section>
+
+  <!-- Section 23' : Flourish 9 Text -->
+
+  <section class = "intro-text">  
+    <h3>
+      Dandora landfill: Methane-heavy Emissions
+    </h3>
+    <p>
+      In 2024, Dandora landfill released about 18,172 tonnes of Methane(CH₄), emissions that have steadily climbed from approximately 17,000 tonnes in 2021.
+    </p>
+    <p>
+      While methane doesn't directly damage the lungs like PM₂.₅, its atmospheric effects make Mathare's existing pollution crisis worse.
+    </p>
+  </section>
+
   
-  <section class="scrolly-section">
+  
+  <!-- <section class="scrolly-section">
     <div class="visuals">
       <iframe id="vis-11" src="https://public.flourish.studio/visualisation/25137102/embed"></iframe>
     </div>
@@ -640,7 +663,8 @@
         </p>
       </div>
     </div>
-  </section>
+  </section> -->
+
   
   <section class = "intro-text">  
     <p>
