--- a/index.html
+++ b/index.html
@@ -457,11 +457,44 @@
     <p>Using <a href= "https://sites.research.google/gr/open-buildings/">Google’s Open Buildings</a> dataset, we verified 775 structures within the Mathare boundary.</p>
     </section>
   
-     <!-- Section 11 : Image 1 (satellite) -->
-    <section class="image1-section">
+  <!-- Section 11 : Scrolly Image (satellite) -->
+  <!--   <section class="image1-section">
     <img src="Screenshot_11.png">
     </section>
-    <section class="image-text">
+    <section class="image-text">-->
+
+  <section class="scrolly-image-section">
+        <div class="scrolling-text">
+          <div class="step" data-target="img-4">
+              <p>
+                Buildings appear tightly packed, filling almost every available space. But the true scale is likely even greater.
+              </p>    
+          </div>
+          <div class="step" data-target="img-5">
+              <p>
+                As an informal settlement, Mathare has many structures that are difficult to single out individually, and its growing number of multi-storey blocks means that a single footprint often houses dozens of families.
+              </p>
+          </div>
+        </div> 
+        <div class="visuals">
+            <img id="img-4" src="Screenshot_11.png">
+            <img id="img-5" src="Mathare Classes 2.png">
+          </div>
+      </section>
+  
+
+    <!-- Section 11' : Image 1 (satellite) text -->
+    <section class="intro-text">
+      <p>
+        On satellite imagery, they appear tightly packed, filling almost every available space. But the true scale is likely even greater. As an informal settlement, Mathare has many structures that are difficult to single out individually, and its growing number of multi-storey blocks means that a single footprint often houses dozens of families.
+      </p>
+      <p>
+        When we classify these verified buildings by area, the dominance of residential structures becomes clear.
+      </p>
+    </section>
+
+    <!-- Section 12' : Florish chart 5' text -->
+    <section class="intro-text">
     <p>
       Behind every footprint on the map are families whose numbers, housing conditions, and energy choices all determine how polluted the air becomes.The census data reveals just how intense this human pressure is.
     </p> 
@@ -635,9 +668,6 @@
   <!-- Section 23' : Flourish 9 Text -->
 
   <section class = "intro-text">  
-    <h3>
-      Dandora landfill: Methane-heavy Emissions
-    </h3>
     <p>
       In 2024, Dandora landfill released about 18,172 tonnes of Methane(CH₄), emissions that have steadily climbed from approximately 17,000 tonnes in 2021.
     </p>
@@ -645,8 +675,6 @@
       While methane doesn't directly damage the lungs like PM₂.₅, its atmospheric effects make Mathare's existing pollution crisis worse.
     </p>
   </section>
-
-  
   
   <!-- <section class="scrolly-section">
     <div class="visuals">
@@ -664,7 +692,6 @@
       </div>
     </div>
   </section> -->
-
   
   <section class = "intro-text">  
     <p>
