--- a/index.html
+++ b/index.html
@@ -498,9 +498,6 @@
     <p>
       Behind every footprint on the map are families whose numbers, housing conditions, and energy choices all determine how polluted the air becomes.The census data reveals just how intense this human pressure is.
     </p> 
-    <p>
-      When we classify these verified buildings by area, the dominance of residential structures becomes clear.
-    </p> 
     </section>
   
     <!-- Section 12 : Flourish 5 chart -->
@@ -518,9 +515,9 @@
     </section>
   
     <!-- Section 13 : Image 2 (satellite) -->
-    <section class="image1-section">
+    <!-- <section class="image1-section">
     <img src="Mathare Classes 2.png" >
-    </section>
+    </section>  -->
     
      <!-- Section 14 : Image 2 Text -->
     <section class="image-text">
