--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     }
     /* ======= Navigation Bar ======= */
     .nav-logo img {
-      height: 60px; 
+      height: auto; 
       width: 60px;
       display: block;
     }
@@ -522,7 +522,7 @@
      <!-- Section 14 : Image 2 Text -->
     <section class="image-text">
     <p>
-    Behind every footprint on the map are families whose numbers, housing conditions, and energy choices all determine how polluted the air becomes.The census data reveals just how intense this human pressure is.
+      Behind every footprint on the map are families whose numbers, housing conditions, and energy choices all determine how polluted the air becomes.
     </p>
     </section>
   
