--- a/index.html
+++ b/index.html
@@ -313,6 +313,13 @@
       line-height: 1;      
       margin-bottom: 0.5rem;
     }
+
+  /* ======= Temp section ======= */
+
+    section {
+    margin-top: 1rem; 
+    margin-bottom: 1rem; 
+  }
     
   </style>
 </head>
