--- a/index.html
+++ b/index.html
@@ -314,11 +314,11 @@
       margin-bottom: 0.5rem;
     }
 
-  /* ======= Temp section ======= */
+  /* ======= Espace section ======= */
 
     section {
-    margin-top: 1rem; 
-    margin-bottom: 1rem; 
+    margin-top: 0.5rem !important; 
+    margin-bottom: 0.5rem !important; 
   }
     
   </style>
