--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
       text-align: left;
       box-sizing: border-box;
       padding: 1.5rem 2rem;
-      margin-top: 0.5rem ; 
-      margin-bottom: 0.5rem ; 
+      margin-top: 2rem ; 
+      margin-bottom: 2rem ; 
       
     }
 
@@ -130,7 +130,7 @@
     .flourish8-figure,
     .flourish9-figure {
       width: 100%;
-      height: 750px;
+      height: auto;
       aspect-ratio: 16 / 9;
       margin-bottom: 1rem;
     }
@@ -186,8 +186,9 @@
       flex-direction: column;
       align-items: center;
       text-align: center;
+      justify-content: center;
       color: black;
-      margin-top: 100vh;
+      margin-top: 50vh;
     }
 
     .step {
