--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
       text-align: left;
       box-sizing: border-box;
       padding: 1.5rem 2rem;
-      margin-top: 2rem ; 
-      margin-bottom: 2rem ; 
+      margin-top: 4rem ; 
+      margin-bottom: 4rem ; 
       
     }
 
@@ -129,7 +129,7 @@
     .flourish7-figure,
     .flourish8-figure,
     .flourish9-figure {
-      width: 100%;
+      width: auto;
       height: auto;
       aspect-ratio: 16 / 9;
       margin-bottom: 1rem;
@@ -188,7 +188,7 @@
       text-align: center;
       justify-content: center;
       color: black;
-      margin-top: 50vh;
+      margin-top: 100vh;
     }
 
     .step {
