--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
     .flourish7-figure,
     .flourish8-figure,
     .flourish9-figure {
-      width: auto;
-      height: auto;
+      width: 100%;
+      height: 700px;
       aspect-ratio: 16 / 9;
       margin-bottom: 1rem;
     }
