--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
       justify-content: center;
       text-align: left;
       box-sizing: border-box;
-      padding: 1.5rem 2rem;
-      margin-top: 4rem ; 
-      margin-bottom: 4rem ; 
+      padding: 1.5rem 6rem;
+      /*margin-top: 4rem ; 
+      margin-bottom: 4rem ; */
       
     }
 
@@ -130,7 +130,7 @@
     .flourish8-figure,
     .flourish9-figure {
       width: 100%;
-      height: 700px;
+      height: 750px;
       aspect-ratio: 16 / 9;
       margin-bottom: 1rem;
     }
