--- a/index.html
+++ b/index.html
@@ -564,19 +564,19 @@
     </div>
   
     <div class="scrolling-text">
-     <!--   <div class="step" data-target="vis-12">
-          <h3>Population Density Across Nairobi Sub-Counties</h3>
-        </div> -->
+     <div class="step" data-target="vis-12">
+        <!--  <h3>Population Density Across Nairobi Sub-Counties</h3>  -->
+        </div> 
 
-        <!--  <div class="step" data-target="vis-8">
-          <h3>Housing Materials in Mathare</h3> -->
+         <div class="step" data-target="vis-8">
+         <!--  <h3>Housing Materials in Mathare</h3> -->
           <p>
             Housing patterns reflect this pressure. About half of households live under iron-sheet roofs, while the others are stacked in concrete-roofed buildings. This distinction matters for air quality. Iron-sheet roofing usually points to single-storey structures, while concrete or cement slabs are a marker of multi-storey housing.
           </p>
         </div>
 
-       <!--  <div class="step" data-target="vis-13">
-          <h3>Household Cooking Fuels in Mathare</h3> -->
+       <div class="step" data-target="vis-13">
+         <!--   <h3>Household Cooking Fuels in Mathare</h3> -->
           <p>
             Energy choices in Mathare show why air pollution persists indoors. Almost half of households rely on paraffin (kerosene), a fuel the World Health Organisation classifies as highly polluting.
             This means, a single building footprint can stack many families on top of one another, multiplying the emissions and smoke produced in the same limited space. Every day, families fill their homes with PM2.5, carbon monoxide, and toxic fumes, while others depend on charcoal or firewood. Even those using LPG often cook in poorly ventilated rooms, allowing smoke to seep outside.
