--- a/index.html
+++ b/index.html
@@ -384,15 +384,15 @@
   
       <div class="scrolling-text">
         <div class="step" data-target="vis-1">
-          <h3>Exposure pollution</h3>
+         <!--  <h3>Exposure pollution</h3> -->
           <p>Exposure to PM2 varies across the continent.</p>
         </div>
         <div class="step" data-target="vis-2">
-          <h3>Household pollution</h3>
+         <!-- <h3>Household pollution</h3> -->
           <p>Indoor air pollution death rates are high in the West, Central and East.</p>
         </div>
         <div class="step" data-target="vis-3">
-          <h3>Ambient pollution</h3>
+          <!-- <h3>Ambient pollution</h3> -->
           <p>Northern and Southern Africa record the highest outdoor air pollution death rates.</p>
         </div>
       </div>
