--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
       justify-content: center;
       color: black;
       margin-top: 100vh;
+      background: lightgray;
     }
 
     .step {
