--- a/index.html
+++ b/index.html
@@ -189,8 +189,11 @@
       justify-content: center;
       color: black;
       margin-top: 100vh;
+      background-color: rgba(128, 128, 128, 0.8); 
+
       
     }
+
 
     .step {
       min-height: 100vh;
@@ -204,6 +207,8 @@
       text-align: center;
       opacity: 0.6;
       transition: opacity 0.3s ease, transform 0.3s ease;
+      background-color: rgba(128, 128, 128, 0.8); 
+
     }
     
     .step h3 {
