--- a/index.html
+++ b/index.html
@@ -224,6 +224,15 @@
       opacity: 1;
       transform: scale(1.05);
     }
+
+    .flourish-scrolly .step {
+    background: rgba(200, 200, 200, 0.7);
+    border-radius: 10px;
+    padding: 2rem;
+    margin-bottom: 2rem;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    backdrop-filter: blur(4px);
+    }
     
     /* ======= Scrolly Images ======= */
     .scrolly-image-section {
@@ -377,7 +386,7 @@
     </section>
   
     <!-- Section 5 : Scrollytelling -->
-      <section class="scrolly-section">
+      <section class="scrolly-section flourish-scrolly">
       <div class="visuals">
         <iframe id="vis-1" src="https://public.flourish.studio/visualisation/24728120/embed"></iframe>
         <iframe id="vis-2" src="https://public.flourish.studio/visualisation/24838022/embed"></iframe>
