--- a/index.html
+++ b/index.html
@@ -228,10 +228,19 @@
     .flourish-scrolly .step {
     background: rgba(200, 200, 200, 0.7);
     border-radius: 10px;
-    padding: 2rem;
-    margin-bottom: 2rem;
+    padding: 1rem 1.5rem; 
+    margin: 1rem auto; 
+    max-width: 600px; 
+    min-height: auto;
     box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-    backdrop-filter: blur(4px);
+    text-align: center; 
+    backdrop-filter: none; 
+    }
+
+    .flourish-scrolly .step p {
+    margin: 0;
+    white-space: normal; 
+    text-align: center; 
     }
     
     /* ======= Scrolly Images ======= */
