--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
   </section> -->
   
   <!-- Section 17 : 3-Step Scrollytelling -->
-  <section class="scrolly-section">
+  <section class="scrolly-section flourish-scrolly">
     <div class="visuals">
       <iframe id="vis-12" src="https://public.flourish.studio/visualisation/24881919/embed"></iframe>
       <iframe id="vis-8" src="https://public.flourish.studio/visualisation/24882063/embed"></iframe>
