--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     padding: 1rem 1.5rem; 
     margin: 1rem auto; 
     max-width: 300px; 
-    min-height: auto;
+    min-height: 300px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.15);
     text-align: center; 
     backdrop-filter: none; 
