--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
     border-radius: 10px;
     padding: 1rem 1.5rem; 
     margin: 1rem auto; 
-    max-width: 700px; 
-    min-height: 200px;
+    max-width: auto; 
+    min-height: auto;
     box-shadow: 0 4px 12px rgba(0,0,0,0.15);
     text-align: center; 
     backdrop-filter: none; 
