--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
     border-radius: 10px;
     padding: 1rem 1.5rem; 
     margin: 1rem auto; 
-    max-width: auto; 
-    min-height: auto;
+    max-width: 600px; 
+    height: auto;
     box-shadow: 0 4px 12px rgba(0,0,0,0.15);
     text-align: center; 
     backdrop-filter: none; 
@@ -584,9 +584,9 @@
     </div>
   
     <div class="scrolling-text">
-     <div class="step" data-target="vis-12">
+     <!-- <div class="step" data-target="vis-12"> -->
         <!--  <h3>Population Density Across Nairobi Sub-Counties</h3>  -->
-        </div> 
+       <!-- </div>  -->
 
          <div class="step" data-target="vis-8">
          <!--  <h3>Housing Materials in Mathare</h3> -->
