--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     border-radius: 10px;
     padding: 1rem 1.5rem; 
     margin: 1rem auto; 
-    max-width: 600px; 
+    width: auto; 
     height: auto;
     box-shadow: 0 4px 12px rgba(0,0,0,0.15);
     text-align: center; 
