--- a/index.html
+++ b/index.html
@@ -227,14 +227,15 @@
 
     .flourish-scrolly .step {
     background: rgba(200, 200, 200, 0.7);
-    border-radius: 10px;
+    border-radius: 5px;
     padding: 1rem 1.5rem; 
     margin: 1rem auto; 
-    width: auto; 
+    max-width: 600px; 
     height: auto;
     box-shadow: 0 4px 12px rgba(0,0,0,0.15);
     text-align: center; 
     backdrop-filter: none; 
+    display: inline-block;
     }
 
     .flourish-scrolly .step p {
