--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
     margin: 1rem auto; 
     max-width: 600px; 
     height: auto;
+    min-height: auto
     box-shadow: 0 4px 12px rgba(0,0,0,0.15);
     text-align: center; 
     backdrop-filter: none; 
