--- a/index.html
+++ b/index.html
@@ -237,6 +237,8 @@
     text-align: center; 
     backdrop-filter: none; 
     display: inline-block;
+    min-height: unset !important; 
+    height: auto !important;
     }
 
     .flourish-scrolly .step p {
