--- a/index.html
+++ b/index.html
@@ -588,9 +588,9 @@
     </div>
   
     <div class="scrolling-text">
-     <!-- <div class="step" data-target="vis-12"> -->
+       <div class="step" data-target="vis-12">
         <!--  <h3>Population Density Across Nairobi Sub-Counties</h3>  -->
-       <!-- </div>  -->
+         </div>
 
          <div class="step" data-target="vis-8">
          <!--  <h3>Housing Materials in Mathare</h3> -->
