--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
       <div class="scrolling-text">
         <div class="step" data-target="vis-1">
          <!--  <h3>Exposure pollution</h3> -->
-          <p>Exposure to PM2 varies across the continent.</p>
+          <p>Exposure to PM2.5 varies across the continent.</p>
         </div>
         <div class="step" data-target="vis-2">
          <!-- <h3>Household pollution</h3> -->
@@ -421,6 +421,71 @@
         </div>
       </div>
     </section>
+
+  <!-- Section 24 : Soudan -->
+  
+  <section class="intro-text">
+    <h3> South Sudan: Heating up and its effects on air quality </h3>
+    <p>
+      Climate change, a phenomenon referring to long-term shifts in temperatures and weather patterns, has been recorded as mainly driven by human activities. Heatwaves have been known to amplify air pollution risks in Sub-Saharan Africa. Greenhouse gases trap heat, causing the planet's average temperature to rise, and some impacts of climate change exacerbate air quality issues. 
+    </p>
+    <p>
+      On the African continent, we will look at South Sudan, an outlier in temperature anomaly.
+    </p>
+   
+  </section>
+
+  <!-- Section 25 : Soudan Scrolly Images -->
+
+      <section class="scrolly-image-section">
+      <div class="scrolling-text">
+        <div class="step" data-target="img-1">
+          <div class="temperature-section">
+            <p>Since the 1980s, Bentiu, located in Unity State in the north of South Sudan, has recorded a temperature increase of:</p> 
+            <span class="count" data-value="3.0">0°C</span>
+          </div>
+        </div>
+        <div class="step" data-target="img-2">
+          <div class="temperature-section">
+            <p>Since the 1980s, Bor, located in Jonglei State in Central South Sudan, has recorded a temperature increase of:</p>
+            <span class="count" data-value="2.8">0°C</span>
+           </div>
+        </div>
+        <div class="step" data-target="img-3">
+         <div class="temperature-section">  
+            <p>Since the 1980s, Juba, located in the Central Equatoria State in Southern South Sudan, has recorded a temperature increase of:</p>
+            <span class="count" data-value="2.6">0°C</span> 
+         </div>   
+        </div> 
+      </div> 
+      <div class="visuals">
+          <img id="img-1" src="Bentiu-Sudan.png">
+          <img id="img-2" src="Bor-Sudan.png">
+          <img id="img-3" src="Juba-Sudan.png">
+        </div>
+      
+    </section>
+
+
+<!-- Section 26 : Sudan text -->
+     <section class="intro-text">
+        <p>
+          South Sudan, and places like it, need to urgently implement systems to mitigate high temperatures. There is a need to support renewable energy, reduce carbon footprint, and advocate for climate policies. Practical steps include:
+       </p>
+        <p>
+          <ul>
+            <li>Create green spaces like parks and forests, urban forests, rooftop gardens, community gardens and green roofs & walls.</li>
+            <li>Plant native species to promote biodiversity.</li>
+            <li>Use renewable energy sources and improve energy efficiency.</li>
+            <li>Walk, bike or take public transport, which will reduce greenhouse gas emissions</li>
+            <li>Reduce, reuse, repair and recycle to reduce the carbon footprint.</li>
+            <li>Advocate for change. Speak up and get others to join in taking action.</li>
+          </ul>
+        </p>
+       
+      </section>
+  
+  
   
     <!-- Section 6 : Flourish 2 text -->
     <section class="intro-text">
