--- a/index.html
+++ b/index.html
@@ -225,9 +225,14 @@
       transform: scale(1.05);
     }
 
-    .step[hidden], .step:empty {
-    display: none !important;
-    }
+    .step:empty {
+    background: transparent !important;
+    box-shadow: none !important;
+    border: none !important;
+    padding: 0 !important;
+    margin: 0 !important;
+    min-height: 0 !important;
+  }
 
     .flourish-scrolly .step {
     background: rgba(200, 200, 200, 0.7);
@@ -674,8 +679,7 @@
     </div>
   
     <div class="scrolling-text">
-       <div class="step" data-target="vis-12" hidden>
-        <!--  <h3>Population Density Across Nairobi Sub-Counties</h3>  -->
+       <div class="step" data-target="vis-12">
          </div>
 
          <div class="step" data-target="vis-8">
