--- a/index.html
+++ b/index.html
@@ -224,15 +224,10 @@
       opacity: 1;
       transform: scale(1.05);
     }
-
+    
     .step:empty {
-    background: transparent !important;
-    box-shadow: none !important;
-    border: none !important;
-    padding: 0 !important;
-    margin: 0 !important;
-    min-height: 0 !important;
-  }
+      display: none !important;
+    }
 
     .flourish-scrolly .step {
     background: rgba(200, 200, 200, 0.7);
