--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
     <!-- Section 12' : Florish chart 5' text -->
     <section class="intro-text">
     <p>
-      Behind every footprint on the map are families whose numbers, housing conditions, and energy choices all determine how polluted the air becomes.The census data reveals just how intense this human pressure is.
+      The treemap highlights how residential structures dominate the settlement, from small single-room units to larger mixed units. The combination of cramped housing and limited open space leaves little room for pollutants to disperse, trapping poor air both inside and outside homes.
     </p> 
     </section>
   
@@ -625,7 +625,7 @@
    <!-- Section 13 : Flourish 5 Text -->
     <section class = "intro-text">
     <p>
-    The treemap highlights how residential structures dominate the settlement, from small single-room units to larger mixed units. The combination of cramped housing and limited open space leaves little room for pollutants to disperse, trapping poor air both inside and outside homes.
+      Behind every footprint on the map are families whose numbers, housing conditions, and energy choices all determine how polluted the air becomes.The census data reveals just how intense this human pressure is.
     </p>
     </section>
   
@@ -647,7 +647,7 @@
     The People Behind the Numbers
   </h3>
   <p>
-  The <a href="https://www.knbs.or.ke/reports/kenya-census-2019/">2019 KNBS Census</a> reveals just how intense this density is. Nearly <strong>69,000</strong> people live in every <strong>square kilometre</strong> of Mathare, almost <strong>three times</strong> the density of Kamukunji, Nairobi's second-most dense sub-county.
+  The <a href="https://www.knbs.or.ke/reports/kenya-census-2019/">2019 KNBS Census</a> shows just how intense this density is. Nearly <strong>69,000</strong> people live in <strong>every square kilometre</strong> of Mathare, almost <strong>three times</strong> the density of Kamukunji, Nairobi's second-most dense sub-county.
   </p>  
   </section>
   
@@ -687,8 +687,7 @@
        <div class="step" data-target="vis-13">
          <!--   <h3>Household Cooking Fuels in Mathare</h3> -->
           <p>
-            Energy choices in Mathare show why air pollution persists indoors. Almost half of households rely on paraffin (kerosene), a fuel the World Health Organisation classifies as highly polluting.
-            This means, a single building footprint can stack many families on top of one another, multiplying the emissions and smoke produced in the same limited space. Every day, families fill their homes with PM<sub>2.5</sub>, carbon monoxide, and toxic fumes, while others depend on charcoal or firewood. Even those using LPG often cook in poorly ventilated rooms, allowing smoke to seep outside.
+          Energy choices in Mathare show why air pollution persists indoors. Almost half of households rely on paraffin (kerosene), a fuel the World Health Organisation classifies as highly polluting. This means, a single building footprint can stack many families on top of one another, multiplying the emissions and smoke produced in the same limited space.
           </p>
         </div>
       
@@ -712,10 +711,9 @@
   <!-- Section 19' : Flourish 7 text -->
   <section class = "intro-text">
   <p>
-  Every day, families fill their homes with PM<sub>2.5</sub>, carbon monoxide, and toxic fumes. while others depend on charcoal or firewood. Even households using cleaner LPG often cook in poorly ventilated rooms, allowing smoke to escape outside where it mingles with emissions from neighboring homes.
-  </p>
+  Fuel choices in Mathare reflect cost and access, not preference. When households cook with paraffin or charcoal, smoke and fumes build up in small rooms and drift into shared corridors. LPG burns cleaner, but in poorly ventilated spaces, indoor air from cooking still escapes into shared corridors, adding to the same air everyone breathes outside.  </p>
   <p>
-  The census data confirms what the sensors measure, in Mathare, dense living conditions and heavy reliance on polluting fuels turn every household into a source of outdoor air pollution.
+  The census data confirms what the sensors measure, in Mathare, dense living conditions and heavy reliance on polluting fuels turn every household into a source of ambient air pollution.
   </p>
   </section>
   
@@ -764,7 +762,10 @@
       Much of Mathare’s waste ends up being burned in the open. Plastic, food scraps, and household refuse are burned in open spaces, releasing PM<sub>2.5</sub> and toxic gases directly where families live.
     </p>
     <p>
-      The waste problem extends far beyond Mathare's boundaries. Nairobi's largest dumping ground, Dandora landfill, sits just kilometers away. According to climate TRACE, Dandora landfill releases thousands of tonnes of greenhouse gases every year. The site’s smoke and methane emissions drift into neighbouring communities, adding to the air quality burden in informal settlement.
+      The waste problem extends far beyond Mathare's boundaries. Nairobi's largest dumping ground, Dandora landfill, sits just kilometers away. According to <a href="https://climatetrace.org/explore/#admin=Nairobi%20County--%20KEN:1791:KEN.30_1:state&gas=co2e&year=2024&timeframe=100&sector=&asset=25778076">Climate TRACE</a>, Dandora landfill releases thousands of tonnes of greenhouse gases every year. The site’s smoke and methane emissions drift into neighbouring communities, adding to the air quality burden in informal settlement.
+     </p>   
+    <p>
+      The census reveals what the sensors confirm: in Mathare, dense living conditions and heavy reliance on polluting fuels turn every household into a source of ambient air pollution.
     </p>
   </section>
   
@@ -827,7 +828,7 @@
         Addressing air pollution in Africa is of great importance for various reasons. Studies suggest a link between air pollution and increased anxiety and other mental health issues like depression, schizophrenia, eating disorders and addictive behaviors. However, Africa receives the least amount of support to address air quality, with merely 3.7% of total development assistance being invested in the continent according to the Africa Clean Air Programme.      
       </p>
       <p>
-        Policies and investments supporting cleaner transport, energy efficient homes, power generation, industry and better municipal waste management would reduce key sources of outdoor air pollution. Access to clean household energy would also greatly reduce ambient air pollution in some regions.
+        Policies and investments supporting cleaner transport, energy efficient homes, power generation, industry and better municipal waste management would reduce key sources of ambient air pollution. Access to clean household energy would also greatly reduce ambient air pollution in some regions.
       </p>
       <p>
         Actionable data is one step towards creating systems that will be a lasting solution to the matter. Expanding air quality monitoring across the continent should be fasttracked with the data then used to assess the links to disease. Hence policymakers can direct regulations and public health interventions. Additionally, public health education should be considered to raise awareness.
