--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
     </div>
   
     <div class="scrolling-text">
-       <div class="step" data-target="vis-12">
+       <div class="step" data-target="vis-12" style="display:none;">
          </div>
 
          <div class="step" data-target="vis-8">
