--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
       <div class="hero-content">
         <div class="text">
           <h1>Breathing in Life or Death; A look at Africa's Air Quality</h1>
-          <h3>Air pollution and climate change are a deadly duo for Africa.</h3>
+          <h3>Air pollution is causing millions of premature deaths each year.</h3>
         </div>
         <div class="image">
           <img src="landing-image.webp">
