--- a/index.html
+++ b/index.html
@@ -682,6 +682,9 @@
   
     <div class="scrolling-text">
        <div class="step" data-target="vis-12">
+          <p>
+           Mathare's population density is almost three times that of the next populous sub-county.
+          </p>  
          </div>
 
          <div class="step" data-target="vis-8">
